make button click do shtuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p class="text-xl md:text-2xl text-center mb-10">Turn your best prompts into shared knowledge – directly from Slack.</p>
 
     <div class="flex justify-center mb-10">
-      <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-xl text-lg font-semibold">Get Early Access</a>
+      <a href="https://forms.gle/juMKGNeG8xpwdP5BA" target="_blank" rel="noopener noreferrer" class="bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-xl text-lg font-semibold"> Get Early Access </a>
     </div>
 
     <div class="grid md:grid-cols-3 gap-8">
