--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <div class="mt-16 text-center">
       <p class="text-gray-400">🔧 MVP in progress. Built by engineers who were tired of copy/pasting ChatGPT answers in Slack. </p>
     </div>
+
+    <p class="text-gray-400 mt-4">
+      📈 Coming soon: searchable prompt history, team knowledge base, and Slack-native prompt reuse flows.
+    </p>
+    
   </div>
 </body>
 </html>
