add project board

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <p class="text-xl md:text-2xl text-center mb-10">Turn your best prompts into shared knowledge – directly from Slack.</p>
 
     <div class="flex justify-center mb-10">
-      <a href="https://forms.gle/juMKGNeG8xpwdP5BA" target="_blank" rel="noopener noreferrer" class="bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-xl text-lg font-semibold"> Get Early Access </a>
+      <a href="https://forms.gle/juMKGNeG8xpwdP5BA" target="_blank" rel="noopener noreferrer"
+         class="bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-xl text-lg font-semibold">
+        Get Early Access
+      </a>
     </div>
 
     <div class="grid md:grid-cols-3 gap-8">
@@ -32,13 +35,10 @@
 
     <div class="mt-16 text-center">
       <p class="text-gray-400">🔧 MVP in progress. Built by engineers who were tired of copy/pasting ChatGPT answers in Slack. </p>
+      <p class="text-gray-400 text-sm mt-4">
+        Curious about what we’re building? <a href="https://github.com/users/ibexmonj/projects/2" class="underline hover:text-blue-400">Follow the project board</a>.
+      </p>
     </div>
-
-    <p class="text-gray-400 mt-4">
-      📈 Coming soon: searchable prompt history, team knowledge base, and Slack-native prompt reuse flows.
-    </p>
-    
   </div>
 </body>
 </html>
-
